[package]
name = "lowtexpal"
version = "0.1.0"
authors = ["Andreas Neukoetter <andreas@omni-mad.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lowtexpal"
path = "src/lowtexpal_main.rs"

[dependencies]

clap = { version = "4.5.53", features = ["derive"] }
css-color = "0.2.8"
hex = "0.4.3"
image = { version = "0.25.9", default-features = false, features = ["png"] }
regex = "1.12.2"
